misc: misc changes